added login endpoint

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-APP_DB_USERNAME="Database Username"
-APP_DB_PASSWORD="Database Password"
-APP_DB_NAME="Database Name"
+APP_DB_USERNAME=
+APP_DB_PASSWORD=
+APP_DB_NAME=
 PORT=3000
+SSL_MODE=
+JWT_SECRET=
+SEED_EMAIL=
+SEED_PASSWORD=
